[mqtt-test] cancellation tests from long time ago
Summary:
related to T12015
  - added some cancellation tests (testing ioc.stop() & client.cancel()
  - some tests fail and some hang (on windows specifically)

Reviewers: ivica

Reviewed By: ivica

Subscribers: miljen, iljazovic

Differential Revision: https://repo.mireo.local/D26317

--- a/win/test/mqtt-test.vcxproj
+++ b/win/test/mqtt-test.vcxproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\test\unit\src\run_tests.cpp" />
+    <ClCompile Include="..\..\test\unit\test\cancellation.cpp" />
     <ClCompile Include="..\..\test\unit\test\client_broker.cpp" />
     <ClCompile Include="..\..\test\unit\test\coroutine.cpp" />
     <ClCompile Include="..\..\test\unit\test\publish_send_op.cpp" />
