--- a/win/test/mqtt-test.vcxproj.filters
+++ b/win/test/mqtt-test.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="..\..\test\unit\src\run_tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\test\unit\test\cancellation.cpp">
+      <Filter>Source Files\test</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
