[mqtt client&test] #includes housekeeping
Summary: resolves T12777

Reviewers: ivica

Reviewed By: ivica

Subscribers: miljen

Maniphest Tasks: T12777

Differential Revision: https://repo.mireo.local/D25995

--- a/win/mqtt-client.vcxproj
+++ b/win/mqtt-client.vcxproj
@@ -55,9 +55,9 @@
     <ClInclude Include="..\include\async_mqtt5\impl\subscribe_op.hpp" />
     <ClInclude Include="..\include\async_mqtt5\impl\unsubscribe_op.hpp" />
     <ClInclude Include="..\include\async_mqtt5\impl\write_op.hpp" />
+    <ClInclude Include="..\include\async_mqtt5\mqtt_client.hpp" />
     <ClInclude Include="..\include\async_mqtt5\property_types.hpp" />
     <ClInclude Include="..\include\async_mqtt5\types.hpp" />
-    <ClInclude Include="..\include\mqtt_client.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\example\openssl-tls.cpp" />
