--- a/win/mqtt-client.vcxproj.filters
+++ b/win/mqtt-client.vcxproj.filters
@@ -147,11 +147,11 @@
     <ClInclude Include="..\include\async_mqtt5\error.hpp">
       <Filter>Header Files\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\mqtt_client.hpp">
-      <Filter>Header Files\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\async_mqtt5.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\async_mqtt5\mqtt_client.hpp">
+      <Filter>Header Files\include</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
