Complete serialization, publish_rec_op & unsubscribe tests
Summary: related to T12015

Reviewers: ivica

Reviewed By: ivica

Subscribers: miljen, iljazovic

Differential Revision: https://repo.mireo.local/D27356

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -16,11 +16,14 @@ add_executable(
     test/client_broker.cpp
     test/compilation_checks.cpp
     test/coroutine.cpp
+    test/disconnect_op.cpp
+    test/publish_rec_op.cpp
     test/publish_send_op.cpp
     test/serialization.cpp
     test/session.cpp
     test/string_validation.cpp
     test/subscribe_op.cpp
+    test/unsubscribe_op.cpp
 )
 
 target_include_directories(mqtt-test PRIVATE include)
