Update documentation and examples for clarity
Summary:
related to T13767

- Rewrite chaining of configuration functions
- Move examples not related to documentation to dev folder
- Rewrite links for clarity
- Update CMakeLists.txt to run one of the examples
- Rewrite auto reconnect and auto retry mechanism for clarity

Reviewers: ivica

Reviewed By: ivica

Subscribers: miljen, iljazovic

Differential Revision: https://repo.mireo.local/D29044

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,24 +8,10 @@ if(PROJECT_IS_TOP_LEVEL)
   find_package(async-mqtt5 REQUIRED)
 endif()
 
-function(add_example name)
-  add_executable("${name}" ${ARGN})
-  target_compile_features("${name}" PRIVATE cxx_std_20) # for coroutines
-  target_link_libraries("${name}" PRIVATE Async::MQTT5)
-endfunction()
+# set(EXAMPLE <your-source-file>.cpp)
+set(EXAMPLE hello_world_over_tcp.cpp)
 
- foreach(f publisher receiver)
-   add_example("${f}" "${f}.cpp")
- endforeach()
-
-set(EXAMPLES
-    tcp.cpp
-    openssl_tls.cpp
-    websocket_tcp.cpp
-    websocket_tls.cpp
-)
-
-find_package(OpenSSL REQUIRED)
-add_executable(examples src/run_examples.cpp ${EXAMPLES})
-target_compile_features(examples PRIVATE cxx_std_17)
-target_link_libraries(examples PRIVATE Async::MQTT5 OpenSSL::SSL)
+find_package(OpenSSL REQUIRED) # if you require SSL connection 
+add_executable(example ${EXAMPLE})
+target_compile_features(example PRIVATE cxx_std_17) # or cxx_std_20
+target_link_libraries(example PRIVATE Async::MQTT5 OpenSSL::SSL)
