boost/mqtt5 in coverage
Reviewers: ivica

Reviewed By: ivica

Subscribers: korina, miljen

Differential Revision: https://repo.mireo.local/D33488

--- a/codecov.yml
+++ b/codecov.yml
@@ -31,4 +31,4 @@ github_checks:
   annotations: true
 
 fixes:
-  - ".*/async_mqtt5/::include/async_mqtt5/"
+  - ".*/boost/mqtt5/::include/boost/mqtt5/"
