--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -77,9 +77,7 @@ jobs:
       - name: Generate Coverage Report
         run: |
           lcov --capture --output-file coverage.info --directory test/build
-          lcov --remove coverage.info '/usr/include/*' --output-file coverage.info
-          lcov --remove coverage.info '**/test/*' --output-file coverage.info
-          lcov --remove coverage.info '**/boost/*' --output-file coverage.info
+          lcov --extract coverage.info '**/boost/mqtt5/*' --output-file coverage.info
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
@@ -90,4 +88,3 @@ jobs:
           fail_ci_if_error: true
           plugin: noop
           token: ${{ secrets.CODECOV_TOKEN }}
-
